--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 </div>
 
 
-    <a href="https://lulugrosche.github.io" id="about-button" class="button">About</a>
+    <a href="about.html" id="about-button" class="button">About</a>
     <script>
         function initializePathAnimation(selector) {
          const path = document.querySelector(selector);
