--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Meine Posts</title>
+    <title>Community Memory Garden</title>
     <meta charset="UTF-8"> 
     <link rel="stylesheet" href="style.css">
  
