--- a/about.html
+++ b/about.html
@@ -68,12 +68,10 @@
         </div>
     </div>
 
-    <!-- Abschnitt 2 -->
-    <div class="textüberschrift-about">
-        Community memory
-   </div>
+  
     <div class="container">
         <div class="text">
+            Community memory <br><br>
             Community Memory, launched in 1973 in Berkeley, California, was a pioneering effort to use technology for social connection. As the first public computerized bulletin board system, it allowed people to share messages, ideas, and resources in a communal digital space. Installed in a local record store, the system democratized access to technology and bridged the gap between the counterculture ideals of the 1960s and the emerging potential of computers to foster creativity and collaboration.
         </div>
 
@@ -125,12 +123,9 @@
         </div>
     </div>
 
-    <!-- Abschnitt 3 -->
-    <div class="textüberschrift-about">
-        Our Community memory garden
-   </div>
     <div class="container">
         <div class="text">
+            Our Community memory garden<br><br>
             Inspired by the Community Memory, our project reimagines Community Memory for the modern era, creating a digital-physical platform designed for students to connect, share, and grow. We are building a web space that serves as a garden for ideas—a collaborative platform where design students can upload content, create interactive ‘tickets’ and showcase their thoughts, projects, and messages. The garden metaphor reflects a space for nurturing creativity and sparking conversations around diverse topics.
             <br><br>
             To maintain a balance between the digital and analog worlds, we integrate a thermal printer as a tactile element of the experience. This allows ideas to bloom not just on screens but also as tangible artifacts—bridging the immediacy of digital communication with the lasting presence of printed media.
