--- a/about.html
+++ b/about.html
@@ -135,21 +135,65 @@
 
         <div class="images-section">
             <div class="bilder">
-                <img class="image" src="about bilder/image3.jpg">
+                <img class="image" src="about bilder/img20250211_14135721.jpeg">
             </div>
-            <div class="beschreibung">Platzhalter</div>
+            <div class="beschreibung">Our Community Memory Garden in use at HAW </div>   
+            
+            <div class="bilder">
+                <img class="image" src="about bilder/img20250211_14112445.jpeg">
+            </div>
+            <div class="beschreibung">Printed tickets created by students</div>  
 
             <div class="bilder">
-                <img class="image" src="about bilder/IMG_8284.jpeg">
+                <img class="image" src="about bilder/img20250211_14101044.jpeg">
             </div>
-            <div class="beschreibung">Platzhalter</div>
+            <div class="beschreibung">Our Community Memory Garden in use at HAW </div>  
 
             <div class="bilder">
-                <img class="image" src="about bilder/IMG_8288.jpeg">
+                <img class="image" src="about bilder/img20250211_14152407.jpeg">
             </div>
-            <div class="beschreibung">Platzhalter</div>
-        </div>
-    </div>
+            <div class="beschreibung">Our Community Memory Garden in use at HAW </div>  
+
+            <div class="bilder">
+                <img class="image" src="about bilder/img20250211_14173124.jpeg">
+            </div>
+            <div class="beschreibung">Our Community Memory Garden in use at HAW </div>  
+
+            <div class="bilder">
+                <img class="image" src="about bilder/img20250211_14163778.jpeg">
+            </div>
+            <div class="beschreibung">Our Community Memory Garden in use at HAW </div>  
+
+            <div class="bilder">
+                <img class="image" src="about bilder/img20250211_14202102.jpeg">
+            </div>
+            <div class="beschreibung">Our Community Memory Garden in use at HAW </div>  
+
+            <div class="bilder">
+                <img class="image" src="about bilder/img20250211_14265285.jpeg">
+            </div>
+            <div class="beschreibung">Our Community Memory Garden in use at HAW </div>  
+
+            <div class="bilder">
+                <img class="image" src="about bilder/img20250211_14244509.jpeg">
+            </div>
+            <div class="beschreibung">Our Community Memory Garden station at the CoLab</div>
+
+            <div class="bilder">
+                <img class="image" src="about bilder/img20250211_14262706.jpeg">
+            </div>
+            <div class="beschreibung">Our Community Memory Garden in use at HAW </div>  
+
+            <div class="bilder">
+                <img class="image" src="about bilder/img20250211_14230227.jpeg">
+            </div>
+            <div class="beschreibung">The team behind Community Memory Garden</div>  
+
+            <div class="bilder">
+                <img class="image" src="about bilder/img20250211_14274682.jpeg">
+            </div>
+            <div class="beschreibung">The team behind Community Memory Garden</div>  
+</div>
         
 
 
