--- a/about.html
+++ b/about.html
@@ -199,7 +199,7 @@
 
 </main>
 
-<a href="index.html" id="about-button" class="button">Our garden</a> 
+<a href="index.html" id="about-button" class="button">Our <br>  garden</a> 
 
 <script>
     function initializePathAnimation(selector) {
