--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Community memory garden </title>
+    <title>Community Memory Garden </title>
     <link rel="stylesheet" 
     href="style.css">
 </head>
@@ -57,13 +57,13 @@
 
 
 <div class="überschrift-about">
-     Community <br> memory <br> garden
+     Community <br> Memory <br> Garden
 </div>
 
 <main>
     <div class="einleitung">
         <div class="text1">
-            Why build community memory gardens?<br><br>
+            Why build Community Memory Gardens?<br><br>
             If we continue to allow platforms to exchange our need for connection for profit, we will end up lonelier than we started.
         </div>
     </div>
@@ -71,7 +71,7 @@
   
     <div class="container">
         <div class="text">
-            Community memory <br><br>
+            Community Memory <br><br>
             Community Memory, launched in 1973 in Berkeley, California, was a pioneering effort to use technology for social connection. As the first public computerized bulletin board system, it allowed people to share messages, ideas, and resources in a communal digital space. Installed in a local record store, the system democratized access to technology and bridged the gap between the counterculture ideals of the 1960s and the emerging potential of computers to foster creativity and collaboration.
         </div>
 
@@ -125,7 +125,7 @@
 
     <div class="container">
         <div class="text">
-            Our Community memory garden<br><br>
+            Our Community Memory Garden<br><br>
             Inspired by the Community Memory, our project reimagines Community Memory for the modern era, creating a digital-physical platform designed for students to connect, share, and grow. We are building a web space that serves as a garden for ideas—a collaborative platform where design students can upload content, create interactive ‘tickets’ and showcase their thoughts, projects, and messages. The garden metaphor reflects a space for nurturing creativity and sparking conversations around diverse topics.
             <br><br>
             To maintain a balance between the digital and analog worlds, we integrate a thermal printer as a tactile element of the experience. This allows ideas to bloom not just on screens but also as tangible artifacts—bridging the immediacy of digital communication with the lasting presence of printed media.
@@ -199,7 +199,7 @@
 
 </main>
 
-<a href="index.html" id="about-button" class="button">Our <br>  garden</a> 
+<a href="index.html" id="about-button" class="button">Our <br>  Garden</a> 
 
 <script>
     function initializePathAnimation(selector) {
