--- a/about.html
+++ b/about.html
@@ -199,7 +199,7 @@
 
 </main>
 
-<a href="index.html" id="about-button" class="button">Our <br>  Garden</a> 
+<a href="index.html" class="button fixed-bottom-right">Our <br> garden</a>
 
 <script>
     function initializePathAnimation(selector) {
