--- a/index.html
+++ b/index.html
@@ -333,7 +333,7 @@
 </div>
 
 
-    <a href="about.html" id="about-button" class="button">About</a>
+   <a href="about.html" class="button">About</a>
     <script>
         function initializePathAnimation(selector) {
          const path = document.querySelector(selector);
