--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Community Memory Garden</title>
-    <link rel="icon" type="image/x-icon" href="/images/favicon.ico">
-    <meta charset="UTF-8"> 
-    <link rel="stylesheet" href="style.css">
- 
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Community Memory Garden </title>
+    <link rel="stylesheet" 
+    href="style.css">
 </head>
 <body>
     <svg id="Ebene_1" data-name="Ebene 1" class="svg1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 273.22 283.77">
