--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 </svg>
 
 <div class="überschrift-about">
-  Community <br> memory <br> garden
+  Community <br> Memory <br> Garden
 </div>
 
 <div id="posts">
