--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
         <hr>
         <div class="timestamp">07.02.2025 13:58:44</div>
         <hr>
-        <div class="content">hallo<br><br></div>
+        <div class="content">How to use community memory garden: 1. type in your request and don't forget to put in some contact information (only information that can be published) 2. Send your request via pressing enter. Your request will now be printed and published on our website. 3. Pin your receipt on the bulettin board and take a look at your request on our webseite. If something doesn't work please contact us: lulu.grosche@gmx.de or jule.jeschke@hotmail.com. Attention please do not use strg+c!<br><br></div>
         <div class="überschrift3">Finde deinen Eintrag auf:<br> http://communitymemorygarden.github.io
 </div>
      </div>
