--- a/about.html
+++ b/about.html
@@ -193,6 +193,11 @@
                 <img class="image" src="about bilder/img20250211_14274682.jpeg">
             </div>
             <div class="beschreibung">The team behind Community Memory Garden</div>  
+
+             <div class="bilder">
+                <img class="image" src="about bilder/austellung.png">
+            </div>
+            <div class="beschreibung">Under Construction 2025, Gängeviertel Hamburg</div> 
 </div>
         
 
