--- a/about.html
+++ b/about.html
@@ -195,7 +195,7 @@
             <div class="beschreibung">The team behind Community Memory Garden</div>  
 
              <div class="bilder">
-                <img class="image" src="about bilder/austellung.png">
+                <img class="image" src="about bilder/austellung.jpeg">
             </div>
             <div class="beschreibung">Under Construction 2025, Gängeviertel Hamburg</div> 
 </div>
