--- a/about.html
+++ b/about.html
@@ -197,7 +197,7 @@
              <div class="bilder">
                 <img class="image" src="about bilder/austellung.jpeg">
             </div>
-            <div class="beschreibung">Under Construction 2025, Gängeviertel Hamburg</div> 
+            <div class="beschreibung">Under Construction 2025, Gaengeviertel Hamburg</div> 
 </div>
         
 
